--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-html, body { height: 100%; width: 100%; margin: 0; }
+html, body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
