--- a/Client/src/app/scheduler/sidebar/inbox/inbox.component.html
+++ b/Client/src/app/scheduler/sidebar/inbox/inbox.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor="let a of testItems" [class.selected]="a === selected" (click)="onSelect(a)">{{a.name}}</li>
+  <li *ngFor="let a of inboxService.testItems" [class.selected]="a === inboxService.selected" (click)="inboxService.selected = a;">{{a.name}}</li>
 </ul>
