Added components to content and a class for borders. Made progress on frame.

--- a/Client/src/app/main/content/content.component.html
+++ b/Client/src/app/main/content/content.component.html
@@ -1,1 +1,2 @@
-content works!
+<div id ="content-body"><app-content-body></app-content-body></div>
+<div id = navbar><app-navbar></app-navbar></div>
