--- a/Client/src/app/main/main.component.html
+++ b/Client/src/app/main/main.component.html
@@ -1,3 +1,3 @@
-<div id="menubar"><app-menubar></app-menubar></div>
-<div id="sidebar"><app-sidebar></app-sidebar></div>
-<div id="content"><app-content></app-content></div>
+<div id="menubar" class="bordercomponent"><app-menubar></app-menubar></div>
+<div id="sidebar" class="bordercomponent"><app-sidebar></app-sidebar></div>
+<div id="content" class="bordercomponent"><app-content></app-content></div>
