--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+.bordercomponent {
+  border: 2px solid black;
+}
