--- a/Client/src/app/main/content/navbar/navbar.component.html
+++ b/Client/src/app/main/content/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Schemaläggare:</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item active" id="dag">
         <a class="nav-link" href="#">Välj Dag<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="tid">
         <a class="nav-link" href="#">Välj Tid</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="beslut">
         <a class="nav-link" href="#">Beslut</a>
     </ul>
   </div>
