--- a/Client/src/app/main/sidebar/sidebar.component.html
+++ b/Client/src/app/main/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 
 <!-- Side navigation -->
 <div class="sidenav">
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#"><h1>Aeon</h1></a>
+  <a href="#">Inbox</a>
+  <a href="#">Inkomna beslut</a>
+  <a href="#">Material</a>
 </div>
 
 <!-- Page content -->
