--- a/Client/src/app/main/content/navbar/navbar.component.html
+++ b/Client/src/app/main/content/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Välj Dag<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" role="button" (click)="setTest('calendar')" >Välj Dag: {{test}}<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Välj Tid</a>
