--- a/Client/src/app/main/sidebar/sidebar.component.html
+++ b/Client/src/app/main/sidebar/sidebar.component.html
@@ -1,3 +1,8 @@
+<!-- Titlebar -->
+<div id = titlebar><app-titlebar></app-titlebar></div>
+
+<!-- Titlebar -->
+<div id="buttonpanel"><app-buttonpanel></app-buttonpanel></div>
 
 <!-- Side navigation -->
 <div class="sidenav">
