--- a/Client/src/app/main/content/navbar/navbar.component.html
+++ b/Client/src/app/main/content/navbar/navbar.component.html
@@ -6,13 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active" id="dag">
-        <a class="nav-link" href="#">Välj Dag<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" (click)="setView('calendar')">Välj Dag<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item" id="tid">
-        <a class="nav-link" href="#">Välj Tid</a>
+        <a class="nav-link" href="#" (click)="setView('day')">Välj Tid</a>
       </li>
       <li class="nav-item" id="beslut">
-        <a class="nav-link" href="#">Beslut</a>
+        <a class="nav-link" href="#" (click)="setView('detail')">Beslut</a>
     </ul>
   </div>
 </nav>
