--- a/Client/src/app/main/sidebar/sidebar.component.css
+++ b/Client/src/app/main/sidebar/sidebar.component.css
@@ -3,7 +3,11 @@
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
+  top: 90px;
   height: 100%;
+  position: absolute;
+  right: 0;
+  left: 0;
   }
 
 
@@ -31,4 +35,26 @@
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+#titlebar{
+  position: absolute;
+  top: 0;
+  height: 30px;
+  left: 0;
+  right: 0;
+  font-size: 16px;
+  color: whitesmoke;
+  background-color: black;
+  font-weight: bold;
+  text-align: center;
+}
+
+#buttonpanel{
+  position: absolute;
+  top: 30px;
+  height: 60px;
+  left: 0;
+  right: 0;
+  background-color: #111111;
 }
