--- a/Client/src/app/main/sidebar/sidebar.component.html
+++ b/Client/src/app/main/sidebar/sidebar.component.html
@@ -4,6 +4,10 @@
 <!-- Titlebar -->
 <div id="buttonpanel"><app-buttonpanel></app-buttonpanel></div>
 
+<!-- Infoheader -->
+<div id="infoheader"><app-infoheader></app-infoheader></div>
+
+
 <!-- Side navigation -->
 <div class="sidenav">
   <a href="#"><h1>Aeon</h1></a>
