--- a/Client/src/app/main/content/navbar/navbar.component.html
+++ b/Client/src/app/main/content/navbar/navbar.component.html
@@ -5,10 +5,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active" id="dag">
+      <li class="nav-item" id="dag">
         <a class="nav-link" href="#" (click)="setView('calendar')">Välj Dag<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" id="tid">
+      <li class="nav-item " id="tid">
         <a class="nav-link" href="#" (click)="setView('day')">Välj Tid</a>
       </li>
       <li class="nav-item" id="beslut">
