added patient data to infoheader

--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -4,19 +4,19 @@
     <div class="col-md-9 " style="background-color: #6d7fcc">
 
       <div class="row" style="height: 25%">
-      <div class="col-md-12 rowh">This is the first box</div>
+      <div class="col-md-12 rowh">Namn: {{patient[0].Namn}}</div>
       </div>
 
       <div class="row" style="height: 25%">
-        <div class="col-md-12 rowh">This is the second box</div>
+        <div class="col-md-12 rowh">Personnummer: {{patient[0].Personnummer}}</div>
       </div>
 
       <div class="row" style="height: 25%">
-        <div class="col-md-12 rowh">This is the third row</div>
+        <div class="col-md-12 rowh">Operationstyp: {{patient[0].Operationstyp}} </div>
       </div>
 
       <div class="row" style="height: 25%">
-        <div class="col-md-12 rowh">This is the third row</div>
+        <div class="col-md-12 rowh">ICD10: {{patient[0].ICD10}}</div>
       </div>
 
     </div>
@@ -26,4 +26,5 @@
   </div>
 
 </div>
+
 
