Added new comps in overview

--- a/Client/src/app/main/sidebar/sidebar.component.html
+++ b/Client/src/app/main/sidebar/sidebar.component.html
@@ -1,1 +1,2 @@
-<div id="planning"><app-planning></app-planning></div>
+<!--<div id="planning"><app-planning></app-planning></div>-->
+<div id="planning"><app-overview></app-overview></div>
