Added service to enamble switching between panels in sidebar

--- a/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
+++ b/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
@@ -2,7 +2,7 @@
   <br>
   <div class="row" >
     <div class="col">
-      <button class="center-block">Tillbaka</button>
+      <button class="center-block" (click)="setPanel('overview')">Tillbaka</button>
     </div>
     <div class="col"></div>
     <div class="col">
