--- a/Client/src/app/main/sidebar/sidebar.component.html
+++ b/Client/src/app/main/sidebar/sidebar.component.html
@@ -1,2 +1,2 @@
-<!--<div id="planning"><app-planning></app-planning></div>-->
-<div id="planning"><app-overview></app-overview></div>
+<div id="planning" *ngIf="getPanel() == 'planning'"><app-planning></app-planning></div>
+<div id="overview" *ngIf="getPanel() == 'overview'"><app-overview></app-overview></div>
