--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -21,7 +21,10 @@
 
     </div>
 
-    <div class="col-md-3 " style="top: 32px; padding: 6px; text-align: center; font-size: 24px; height: 88px"> AKUT </div>
+    <div class="col-md-3 " style="top: 32px; padding: 6px; text-align: center; font-size: 24px; height: 88px"> AKUT
+      <div class="row-md" style="font-size: medium"> Tid kvar: <br> 20 min</div>
+    </div>
+
 
   </div>
 
