--- a/Client/src/app/main/sidebar/overview/overview.component.html
+++ b/Client/src/app/main/sidebar/overview/overview.component.html
@@ -7,15 +7,5 @@
 
 <!-- Side navigation -->
 <div class="sidenav">
-
-  <div class="container" style="width: 100%">
-    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#decision_info" style="width: 100%">Beslutsinformation</button>
-    <div id="decision_info" class="collapse" style="color: whitesmoke;">
-
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    </div>
-  </div>
+  <div><app-decisions></app-decisions></div>
 </div>
