--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -1,15 +1,15 @@
 <!-- Titlebar -->
-<div id = titlebar><app-titlebar></app-titlebar></div>
+<div id = titlebar class="dark-c"><app-titlebar></app-titlebar></div>
 
 <!-- Titlebar -->
-<div id="buttonpanel"><app-buttonpanel></app-buttonpanel></div>
+<div id="buttonpanel" class="dark-c"><app-buttonpanel></app-buttonpanel></div>
 
 <!-- Infoheader -->
 <div id="infoheader"><app-infoheader></app-infoheader></div>
 
 
 <!-- Side navigation -->
-<div class="sidenav">
+<div class="sidenav dark-c">
 
   <div class="container" style="width: 100%">
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#decision_info" style="width: 100%">Beslutsinformation</button>
