Update styles color

--- a/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
+++ b/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
@@ -1,5 +1,5 @@
   <div *ngFor="let d of decisionList">
     {{setPatient(d)}}
-    <div style="padding-left: 3%; padding-right: 3%"><app-infoheader></app-infoheader></div>
+    <div><app-infoheader></app-infoheader></div>
     <br>
   </div>
