--- a/Client/src/app/main/sidebar/overview/overview.component.html
+++ b/Client/src/app/main/sidebar/overview/overview.component.html
@@ -1,11 +1,11 @@
 <!-- Titlebar -->
-<div id = titlebar-overview><app-titlebar-view></app-titlebar-view></div>
+<div id = titlebar-overview class="dark-c"><app-titlebar-view></app-titlebar-view></div>
 
 <!-- Titlebar -->
-<div id="buttonpanel-overview"><app-buttonpanel-overview></app-buttonpanel-overview></div>
+<div id="buttonpanel-overview" class="dark-c"><app-buttonpanel-overview></app-buttonpanel-overview></div>
 
 
 <!-- Side navigation -->
-<div class="sidenav">
+<div class="sidenav sidenav-size">
   <div><app-decisions></app-decisions></div>
 </div>
