--- a/Client/src/app/main/sidebar/overview/overview.component.css
+++ b/Client/src/app/main/sidebar/overview/overview.component.css
@@ -1,40 +1,6 @@
-.sidenav {
-  z-index: 1; /* Stay on top */
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+.sidenav{
   top: 120px;
   height: 91%;
-  position: absolute;
-  right: 0;
-  left: 0;
-}
-
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Style page content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0 10px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
 }
 
 /*Titelbar*/
@@ -42,11 +8,9 @@
   position: absolute;
   top: 0;
   height: 30px;
-  left: 0;
-  right: 0;
+  width: 100%;
   font-size: 16px;
   color: whitesmoke;
-  background-color: #111111;
   font-weight: bold;
   text-align: center;
 }
@@ -56,7 +20,5 @@
   position: absolute;
   top: 30px;
   height: 90px;
-  left: 0;
-  right: 0;
-  background-color: #111111;
+  width: 100%;
 }
