--- a/Client/src/app/main/sidebar/overview/overview.component.html
+++ b/Client/src/app/main/sidebar/overview/overview.component.html
@@ -6,6 +6,6 @@
 
 
 <!-- Side navigation -->
-<div class="sidenav sidenav-size">
+<div class="sidenav">
   <div><app-decisions></app-decisions></div>
 </div>
