--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -1,11 +1,11 @@
 <!-- Titlebar -->
-<div id = titlebar class="dark-c"><app-titlebar></app-titlebar></div>
+<div id = titlebar class="container dark-c"><app-titlebar></app-titlebar></div>
 
 <!-- Titlebar -->
-<div id="buttonpanel" class="dark-c"><app-buttonpanel></app-buttonpanel></div>
+<div id="buttonpanel" class="container-fluid dark-c"><app-buttonpanel></app-buttonpanel></div>
 
 <!-- Infoheader -->
-<div id="infoheader"><app-infoheader></app-infoheader></div>
+<div id="infoheader" class="container-fluid" style="padding-top: 3%"><app-infoheader></app-infoheader></div>
 
 
 <!-- Side navigation -->
