--- a/Client/src/app/main/sidebar/overview/overview.component.css
+++ b/Client/src/app/main/sidebar/overview/overview.component.css
@@ -1,15 +1,10 @@
-.sidenav{
-  top: 120px;
-  height: 91%;
-}
 
 /*Titelbar*/
 #titlebar-overview{
   position: absolute;
-  top: 0;
-  height: 30px;
+  height: 3%;
   width: 100%;
-  font-size: 16px;
+  font-size: x-large;
   color: whitesmoke;
   font-weight: bold;
   text-align: center;
@@ -17,8 +12,15 @@
 
 /*Buttons for decisions panel*/
 #buttonpanel-overview{
+  top: 3%;
   position: absolute;
-  top: 30px;
-  height: 90px;
+  height: 15%;
   width: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.sidenav {
+  top: 18%;
+  height: 82%;
 }
