--- a/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
+++ b/Client/src/app/main/sidebar/planning/buttonpanel/buttonpanel.component.html
@@ -1,12 +1,11 @@
-<div id="buttonbox" class="container">
-  <br>
+<div class="container-fluid">
   <div class="row" >
     <div class="col">
-      <button class="center-block" (click)="setPanel('overview')">Tillbaka</button>
+      <button class="btn btn-primary center-block" (click)="setPanel('overview')">Tillbaka</button>
     </div>
     <div class="col"></div>
     <div class="col">
-      <button class="center-block">Manuell</button>
+      <button class="btn btn-primary center-block">Manuell</button>
     </div>
   </div>
 </div>
