--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" >
+<div class="container-fluid" style="padding: 2%">
 
   <div class="row row-s">
     <div class="col-md-9 blue-bg col-l9">
@@ -26,7 +26,7 @@
     </div>
 
 
-    <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding-top: 24px; text-align: center; font-size: 24px; height: 100%"> {{getPatient().Bradskandegrad}}
+    <div class="col-md-3" [ngClass]="patient.Bradskandegrad == 'AKUT' ? 'red-bg' : 'blue-bg'" style="padding: 5% 2% 0 2%; text-align: center; font-size: 24px; height: auto"> {{getPatient().Bradskandegrad}}
       <div class="row-md" style="font-size: medium"> Tid kvar: <br> {{patient.Tid}}</div>
     </div>
 
