--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -12,7 +12,7 @@
 <div class="sidenav dark-c">
 
   <div class="container" style="width: 100%">
-    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#decision_info" style="width: 100%">Beslutsinformation</button>
+    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#decision_info" style="width: 100%">Beslutsinformation</button>
     <div id="decision_info" class="collapse" style="color: whitesmoke;">
 
       Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -25,7 +25,7 @@
   <br>
 
   <div class="container" style="width: 100%">
-    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#materiel_list" style="width: 100%">Materiellista</button>
+    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#materiel_list" style="width: 100%">Materiellista</button>
     <div id="materiel_list" class="collapse" style="color: whitesmoke;">
 
       Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -38,7 +38,7 @@
   <br>
 
   <div class="container" style="width: 100%">
-    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#search_parameters" style="width: 100%">Sökparametrar</button>
+    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#search_parameters" style="width: 100%">Sökparametrar</button>
     <div id="search_parameters" class="collapse" style="color: whitesmoke;">
 
       Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -50,7 +50,7 @@
       <br>
 
       <div class="container" style="width: 100%">
-        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#search-param" style="width: 100%">Lägg till sökparameter</button>
+        <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#search-param" style="width: 100%">Lägg till sökparameter</button>
         <div id="search-param" class="collapse" style="color: whitesmoke;">
 
           Lorem ipsum dolor sit amet, consectetur adipisicing elit,
