--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -1,7 +1,6 @@
-<div class="container-fluid">
-  <br>
+<div class="container-fluid" style="height: 100%">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" style="padding: 2% 5% 2% 5%">
 
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search" id="txtSearch" [(ngModel)]="searchTxt"/>
@@ -16,8 +15,8 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-md-6">
-      <div class="btn-group" style="width: 50%">
+    <div class="col-md-5" style="padding: 2% 5% 2% 5%">
+      <div class="btn-group" style="width: 100%">
 
         <button type="button" class="btn dropdown-toggle btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 100%">
           Sortera
@@ -33,8 +32,9 @@
 
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="btn-group pull-right" style="width: 50%">
+    <div class="col-xs-2"></div>
+    <div class="col-md-5" style="padding: 2% 5% 2% 5%">
+      <div class="btn-group pull-right" style="width: 100%">
 
         <button type="button" class="btn dropdown-toggle btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 100%">
           Filtrera
