--- a/Client/src/app/main/sidebar/planning/planning.component.css
+++ b/Client/src/app/main/sidebar/planning/planning.component.css
@@ -2,17 +2,18 @@
 /*Titelbar*/
 #titlebar{
   position: absolute;
-  height: 3%;
+  height: 4%;
   width: 100%;
   font-size: x-large;
   color: whitesmoke;
   font-weight: bold;
   text-align: center;
+  padding: 1% 2% 2% 2%;
 }
 
 /*Buttons for decisions panel*/
 #buttonpanel{
-  top: 3%;
+  top: 4%;
   position: absolute;
   height: 5%;
   width: 100%;
@@ -21,7 +22,7 @@
 }
 
 #infoheader {
-  top: 8%;
+  top: 9%;
   position: absolute;
   height: 15%;
   width: 100%;
@@ -30,6 +31,6 @@
 }
 
 .sidenav {
-  top: 23%;
-  height: 77%;
+  top: 24%;
+  height: 76%;
 }
