--- a/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
+++ b/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
@@ -1,14 +1,10 @@
-
-
-
-<div class="container" style="width: 100%">
-  <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#decision_info" style="width: 100%" (click)="createComponents()">Beslutsinformation</button>
-  <div id="decision_info" class="collapse" style="color: whitesmoke;">
-
-    <div><template #infoh></template></div>
-
+<div class="container-fluid" style="width: 100%">
+  <div class="row">
+    <div class="md-2 col-md-3 "> <button class="btn btn-primary" (click)="createComponents()">Uppdatera</button> </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12"> <div><template #infoh></template></div> </div>
   </div>
 </div>
 
-<br>
 
