--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -1,3 +1,4 @@
-<p>
-  calender-view works!
-</p>
+<mwl-calendar-month-view
+  [viewDate]="viewDate"
+  [events]="events">
+</mwl-calendar-month-view>
