--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'angular-calendar.css';
 
 .bordercomponent {
   border: 2px solid black;
