Began to implement search function

--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" (click)="setPatient(patient); setPanel('planning')" style="padding: 2%" >
+<div class="container-fluid a" (click)="setPatient(patient); setPanel('planning')" style="padding: 2%" >
 
   <div class="row row-s">
     <div class="col-md-9 blue-bg col-l9">
