--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -5,7 +5,7 @@
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search" id="txtSearch" [(ngModel)]="searchTxt"/>
         <div class="input-group-btn">
-          <button class="btn btn-primary" type="submit">
+          <button class="btn btn-primary" (click)="search()" type="submit">
             <span class="glyphicon glyphicon-search"></span>
           </button>
         </div>
