Added checkbox to btn filtera

--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -41,11 +41,18 @@
         </button>
 
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Akut</a>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Elektiv</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Separated link</a>
+          <!--
+          <a class="dropdown-item" href="#" ><input type="checkbox"/>&nbsp;Alla</a>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Another action</a>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Something else here</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><input type="checkbox"/>&nbsp;Separated link</a>
+          -->
         </div>
 
       </div>
