--- a/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
+++ b/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
@@ -1,4 +1,14 @@
 
-<button (click)="createComponent(decisionList[0]);createComponent(decisionList[1]);createComponent(decisionList[2])">Test</button>
+
+
+<div class="container" style="width: 100%">
+  <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#decision_info" style="width: 100%" (click)="createComponents()">Beslutsinformation</button>
+  <div id="decision_info" class="collapse" style="color: whitesmoke;">
+
     <div><template #infoh></template></div>
+
+  </div>
+</div>
+
+<br>
 
