--- a/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
+++ b/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="container" style="width: 100%">
-  <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#decision_info" style="width: 100%" (click)="createComponents()">Beslutsinformation</button>
+  <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#decision_info" style="width: 100%" (click)="createComponents()">Beslutsinkorg</button>
   <div id="decision_info" class="collapse" style="color: whitesmoke;">
 
     <div><template #infoh></template></div>
