--- a/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
+++ b/Client/src/app/main/sidebar/overview/decisions/decisions.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="width: 100%">
   <div class="row">
-    <div class="md-2 col-md-3 "> <button class="btn btn-primary" (click)="createComponents()">Uppdatera</button> </div>
+    <div class="md-2 col-md-3 "> <button class="btn btn-primary" (click)="viewAll()">Uppdatera</button> </div>
   </div>
   <div class="row">
     <div class="col-md-12"> <div><template #infoh></template></div> </div>
