--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.css
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.css
@@ -20,11 +20,16 @@
 }
 
 
- .a.table-hover {
-  background-color: #0d2b37;
+ .blue-bg:hover {
+  background-color: #177288;
   color: whitesmoke;
 
 }
+
+ .row-s:hover{
+  cursor: pointer;
+   background-color: blue;
+ }
 
 .col-md-12 {
   font-size: medium;
