--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -1,5 +1,6 @@
 <mwl-calendar-month-view
   [viewDate]="viewDate"
   [events]="events"
-  on-event-click="console.log('HEJ')">
+  (dayClicked)="test($event)">
 </mwl-calendar-month-view>
+
