--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -1,4 +1,5 @@
 <mwl-calendar-month-view
   [viewDate]="viewDate"
-  [events]="events">
+  [events]="events"
+  on-event-click="console.log('HEJ')">
 </mwl-calendar-month-view>
