--- a/Client/src/app/main/content/content.component.html
+++ b/Client/src/app/main/content/content.component.html
@@ -1,5 +1,6 @@
-<div id ="calendar-view" class="content-body" *ngIf="getView() == 'calendar'"><app-calender-view></app-calender-view></div>
-<div id ="day-view" class="content-body" *ngIf="getView() == 'day'"><app-day-view></app-day-view></div>
-<div id ="detail-view" class="content-body" *ngIf="getView() == 'detail'"><app-detail-view></app-detail-view></div>
 
-<div id = navbar><app-navbar></app-navbar></div>
+<div class="container-fluid content-body">
+
+  <div id ="calendar-view"><app-calender-view></app-calender-view></div>
+
+</div>
