--- a/Client/src/app/main/content/navbar/navbar.component.html
+++ b/Client/src/app/main/content/navbar/navbar.component.html
@@ -1,18 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Schemaläggare:</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item" id="dag">
-        <a class="nav-link" href="#" (click)="setView('calendar')">Välj Dag<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item " id="tid">
-        <a class="nav-link" href="#" (click)="setView('day')">Välj Tid</a>
-      </li>
-      <li class="nav-item" id="beslut">
-        <a class="nav-link" href="#" (click)="setView('detail')">Beslut</a>
-    </ul>
-  </div>
+<nav class="navbar navbar-expand-lg">
+
 </nav>
