Started on event combining.

--- a/Client/src/app/main/content/calender-view/calender-view.component.css
+++ b/Client/src/app/main/content/calender-view/calender-view.component.css
@@ -11,3 +11,8 @@ pre {
   margin: 0;
 }
 
+.myclass a {
+  color: purple !important;
+  background-color: mediumseagreen !important;
+  float: right;
+}
