--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -75,6 +75,8 @@
   </div>
 </div>
 <br>
+<button (click)="combineEvents()">COMBINE</button>
+<button (click)="changeEvents()">TESTBUTTON</button>
   <div [ngSwitch]="view">
     <mwl-calendar-month-view
       *ngSwitchCase="'month'"
