--- a/Client/src/app/main/content/content.component.html
+++ b/Client/src/app/main/content/content.component.html
@@ -1,6 +1,2 @@
 
-<div class="container-fluid content-body">
-
-  <div id ="calendar-view"><app-calender-view></app-calender-view></div>
-
-</div>
+<div id ="calendar-view" class="container-fluid content-body"><app-calender-view></app-calender-view></div>
