--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -5,7 +5,7 @@
 <div id="buttonpanel" class="container-fluid dark-c"><app-buttonpanel></app-buttonpanel></div>
 
 <!-- Infoheader -->
-<div id="infoheader" class="container-fluid" style="padding: 5%"><app-infoheader></app-infoheader></div>
+<div id="infoheader" class="container-fluid"><app-infoheader></app-infoheader></div>
 
 
 <!-- Side navigation -->
