--- a/Client/src/app/main/content/calender-view/calender-view.component.css
+++ b/Client/src/app/main/content/calender-view/calender-view.component.css
@@ -16,3 +16,12 @@ pre {
   background-color: mediumseagreen !important;
   float: right;
 }
+.row.a {
+  height: 100%;
+  padding: 1% 1% 0 1%;
+  overflow: scroll;
+}
+
+.col-md.col-a {
+  padding: 0;
+}
