--- a/Client/src/app/main/sidebar/overview/overview.component.css
+++ b/Client/src/app/main/sidebar/overview/overview.component.css
@@ -9,6 +9,7 @@
   font-weight: bold;
   text-align: center;
   padding: 1% 2% 2% 2%;
+  min-height: 40px;
 }
 
 /*Buttons for decisions panel*/
@@ -19,9 +20,11 @@
   width: 100%;
   padding-top: 2%;
   padding-bottom: 2%;
+  min-height: 100px;
 }
 
 .sidenav {
   top: 22%;
   height: 78%;
+  min-height: 300px;
 }
